fix overflowed code blocks

--- a/sass/css/post.scss
+++ b/sass/css/post.scss
@@ -3,7 +3,6 @@
     left: calc(-#{$percentage} / 2);
     width: calc(100% + #{$percentage});
   }
-
 }
 
 html {
@@ -149,6 +148,10 @@ article {
     border-radius: 4px;
   }
 
+  > pre {
+    @include overflow-page(40%);
+  }
+
   pre {
     padding: 2.5rem 0.5rem 0.5rem;
     line-height: 1.5;
@@ -158,8 +161,6 @@ article {
     font-size: 0.9em;
     border: 6px solid var(--primary-light-color);
     position: relative;
-
-    @include overflow-page(40%);
 
     &::before {
       position: absolute;
